--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -64,7 +64,7 @@
                         <div class="col-xs-12 col-sm-6 align-right">
                             <div class="switch panel-switch-btn">
                                 <span class="m-r-10 font-12">REAL TIME</span>
-                                <label>OFF<input type="checkbox" id="realtime" checked><span class="lever switch-col-cyan"></span>ON</label>
+                                <label>OFF<input type="checkbox" id="realtime"><span class="lever switch-col-cyan"></span>ON</label>
                             </div>
                         </div>
                     </div>
